name:                stack
version:             0.1.0.0
synopsis:            minimal mathjax server
homepage:            http://github.com/nathantypanski/minimal-mathjax-server
license:             BSD3
license-file:        LICENSE
author:              Nathan Typanski
maintainer:          ndt@nathantypanski.com
build-type:          Simple
cabal-version:       >=1.10

executable stack
   main-is: stack.hs
   other-extensions: 
  build-depends: happstack-server > 7.3, haskell2010
  build-tools: hsc2hs
  default-language: Haskell2010
